# xn-language-by-cpp

./: .clang-format  .clangd  CMakeLists.txt  readme.md
src/: useful_macro.hh  xn.cc
src/3rd/gsl/: pointers
src/3rd/xn_lib/: include_me.hh
src/3rd/xn_lib/base_type/: include_me.hh
src/3rd/xn_lib/base_type/src/: base_type.hh  byte_operation.hh  cencept_extension.hh  format_adaptation.hh  string_extension.hh  type_conversion.hh  type_traits_extension.hh
src/3rd/xn_lib/debug/: include_me.hh
src/3rd/xn_lib/debug/src/: stacktrace_error.hh
src/3rd/xn_lib/easy_template/: include_me.hh
src/3rd/xn_lib/easy_template/src/: base_concept.hh  constexpr_for.hh  tuple_helper.hh  unpacking.hh  useful_macro.hh
src/3rd/xn_lib/idl_protocol/: include_me.hh
src/3rd/xn_lib/idl_protocol/src/: message_handler.hh  protocol.hh
src/3rd/xn_lib/net/: include_me.hh
src/3rd/xn_lib/net/src/: ip.hh
src/3rd/xn_lib/timer/: timer.hh
src/analysis/: analysis.hh
src/exprs/: expression.hh
src/log/: log.hh
src/reader/: position.hh  reader.cc  reader.hh
src/tables/: tree_table.hh  type_table.hh  word_table.hh
src/tmp-cppcode_gen/: cppgen.cc  cppgen.hh
src/tree/: tree.cc  tree.hh
